--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -386,7 +386,7 @@
                         <image src="Images\m12.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Jagadeesh Dileepa Abeysekera </h5>
+                                <h5>Dileepa Abeysekera </h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -402,7 +402,7 @@
                         <image src="Images\m6.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Bandula Lakshman Jayasinghe </h5>
+                                <h5>Bandula Jayasinghe </h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -418,7 +418,7 @@
                         <image src="Images\m13.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Somapala Indika Pradeep </h5>
+                                <h5>Indika Appurala</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -434,7 +434,7 @@
                         <image src="Images\m7.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Aladinge Dias Gunaratne</h5>
+                                <h5>A.D. Gunaratne</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -450,7 +450,7 @@
                         <image src="Images\m8.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Biyanwilage Don Mervyn Joseph</h5>
+                                <h5>Mervyn Priyantha</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -482,7 +482,7 @@
                         <image src="Images\m9.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Wasantha Mihidukulasuriya</h5>
+                                <h5>Wasantha Mihindukulasuriya</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -498,7 +498,7 @@
                         <image src="Images\m11.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Somasiri Sanath Julian Gunathilaka</h5>
+                                <h5>Sanath Gunathilaka</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
