--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -316,6 +316,22 @@
                         </div>
                     </div>
 
+                    <div class="item">
+                        <image src="Images\tikiri.jpg" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Tikiri Weerasinghe </h5>
+                                <p>Coordinator <br>Membership</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
