--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 </h1>
                 <p>
                     We proudly represent some of Sri Lanka’s <br />
-                    finest Writers and composers.
+                    finest Song Writers and composers.
 
                 </p>
 
