--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -316,22 +316,6 @@
                         </div>
                     </div>
 
-                    <div class="item">
-                        <image src="Images\tikiri.jpg" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Tikiri Weerasinghe </h5>
-                                <p>Coordinator <br>Membership</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -402,7 +386,7 @@
                         <image src="Images\m12.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Dileepa Abeysekera </h5>
+                                <h5>Jagadeesh Dileepa Abeysekera </h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -418,7 +402,7 @@
                         <image src="Images\m6.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Bandula Jayasinghe </h5>
+                                <h5>Bandula Lakshman Jayasinghe </h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -434,7 +418,7 @@
                         <image src="Images\m13.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Indika Appurala</h5>
+                                <h5>Somapala Indika Pradeep </h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -450,7 +434,7 @@
                         <image src="Images\m7.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>A.D. Gunaratne</h5>
+                                <h5>Aladinge Dias Gunaratne</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -466,7 +450,7 @@
                         <image src="Images\m8.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Mervyn Priyantha</h5>
+                                <h5>Biyanwilage Don Mervyn Joseph</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -498,7 +482,7 @@
                         <image src="Images\m9.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Wasantha Mihindukulasuriya</h5>
+                                <h5>Wasantha Mihidukulasuriya</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -514,7 +498,7 @@
                         <image src="Images\m11.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Sanath Gunathilaka</h5>
+                                <h5>Somasiri Sanath Julian Gunathilaka</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
