--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <p class="copyrightViolationSection_content_subheading">
                     Once you are a member,
                     <br />
-                    <em class="copyrightViolationSection_content_subheading--emphasis"> wwe protect your music like it’s our own; 
+                    <em class="copyrightViolationSection_content_subheading--emphasis"> we protect your music like it’s our own; 
                         <br /> regardless of who you are  </em> <br /> or who violated your copyrights.
 
                 </p>
@@ -364,7 +364,7 @@
                 </h1>
                 <p>
                     We proudly represent some of Sri Lanka’s <br />
-                    finest writers, composers and performers.
+                    finest Song writers and composers.
 
                 </p>
 
