--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -317,10 +317,10 @@
                     </div>
 
                     <div class="item">
-                        <image src="Images\m17.jpg" alt="team" />
+                        <image src="Images\tikiri.jpg" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Ishani Jayathilake </h5>
+                                <h5>Tikiri Weerasinghe</h5>
                                 <p>Coordinator <br>Membership</p>
 
                                 <div class="social-links">
@@ -331,7 +331,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
