--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                     <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content">
                         <h3 class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_title">
-                            MASTER LICENCING
+                            DERIVATIVE LICENCING
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
                             If you are using already recorded music in your original work or derivative work.
@@ -257,7 +257,7 @@
                             If you plan on printing sheet music, displaying lyrics of a song created or rearranging sheet music.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            Eg: Lyric Displays in Websites, Song Rearrangement etc.
+                            Eg: Lyric Displays on Websites, Song Rearrangement etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -267,17 +267,17 @@
                 </div>
                 <div class="copyrightTypesSection__licenceTypesContainer__licenceCard">
                     <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__imageSection">
-                        <img src="./images/index-assets/theatrical_licence_icon.svg" />
+                        <img height="120px" width="120px" src="./images/index-assets/digital_licence_icon.svg" />
                     </div>
                     <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content">
                         <h3 class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_title">
-                            THEATRICAL LICENSE
+                            DIGITAL LICENSE
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan on using copyrighted music in your stage performance.
+                            If you plan on using copyrighted music in your live streams.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            Eg: Plays, Concerts, Improv, etc.
+                            Eg: Youtube, Facebook, Instagram, Twitter, Twitch, LinkedIn Live, etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
