--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -161,7 +161,7 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href=""><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/harsha-bulathsinghala-90991883/" target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href=""><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/ranga-dasanayake-625b3032/" target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href=""><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/chathura-m-434340182/" target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
                                 <div class="social-links">
                                     <a href=""><span class="fa fa-facebook"></span></a>
                                     <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                    <a href="https://www.linkedin.com/in/chanodya-indusara-914871215/" target="_blank"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
                                 <div class="social-links">
                                     <a href=""><span class="fa fa-facebook"></span></a>
                                     <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                    <a href="https://www.linkedin.com/in/ishani-jayathilake-b272001b4/" target="_blank"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                         </div>
