--- a/our_team_australia.html
+++ b/our_team_australia.html
@@ -160,7 +160,7 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href=""><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/harsha-bulathsinghala-90991883/" target="_blank"><span class="fa fa-linkedin"></span></a>
 
                                     </div>
                                 </div>
@@ -212,7 +212,7 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href=""><span class="fa fa-linkedin"></span></a>
+                                        <a  href="https://www.linkedin.com/in/chathura-m-434340182/" target="_blank"><span class="fa fa-linkedin"></span></a>
 
                                     </div>
                                 </div>
