Home page and membrers page changes done

--- a/index.html
+++ b/index.html
@@ -115,15 +115,16 @@
                     INTERNATIONALLY RECOGNIZED MUSIC LICENCING
                 </h1>
                 <p class="heroSection__heroContent__description">
-                    Register your music in an internationally recognized catalogue so you receive the royalties and credit you deserve.
+                    Register your music in an internationally recognized catalogue to receive the royalties you
+                    rightfully own and the credit you deserve.
                 </p>
                 <div class="heroSection__heroContent__servicesSection">
                     <div class="heroSection__heroContent__servicesSection__serviceCard">
                         <img src="images/index-assets/global_recognition_icon.svg" alt="Global Recognition"
                             class="heroSection__heroContent__servicesSection__serviceCard__icon" />
                         <p class="heroSection__heroContent__servicesSection__serviceCard__title">
-                            Global <br />Recognition 
-                           
+                            Global <br />Recognition
+
                         </p>
                     </div>
                     <div class="heroSection__heroContent__servicesSection__serviceCard">
@@ -194,7 +195,8 @@
                             MECHANICAL LICENCING
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan on reproducing or recreating an existing piece of music such as a cover song or distributing the original music as physical copies.
+                            If you plan on reproducing or recreating an existing piece of music such as a cover song or
+                            distributing the original music as physical copies.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
                             Eg: Advertisements, Television, movies, Youtube Videos etc.
@@ -234,7 +236,8 @@
                             DERIVATIVE LICENCING
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you are using already recorded music in your original work or derivative work.
+                            If you are using already recorded music as a part or as a sample in your original work or as
+                            complete derivative work.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
                             Eg: Sampling, Mashups, Radio, etc.
@@ -254,7 +257,8 @@
                             PRINT RIGHTS
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan on printing sheet music, displaying lyrics of a song created or rearranging sheet music.
+                            If you plan on printing sheet music, displaying lyrics of a song created or rearranging
+                            sheet music.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
                             Eg: Lyric Displays on Websites, Song Rearrangement etc.
@@ -271,10 +275,11 @@
                     </div>
                     <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content">
                         <h3 class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_title">
-                            DIGITAL LICENSE
+                            DIGITAL TRANSMISSION / DISTRIBUTION
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan on using copyrighted music in your live streams.
+                            If you need to distribute copyrighted music or convert it from Vynil to CD to DIGITAL or any
+                            other form.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
                             Eg: Youtube, Facebook, Instagram, Twitter, Twitch, LinkedIn Live, etc.
@@ -316,8 +321,9 @@
                 <p class="copyrightViolationSection_content_subheading">
                     Once you are a member,
                     <br />
-                    <em class="copyrightViolationSection_content_subheading--emphasis"> we protect your music like it’s our own; 
-                        <br /> regardless of who you are  </em> <br /> or who violated your copyrights.
+                    <em class="copyrightViolationSection_content_subheading--emphasis"> we protect your music like it’s
+                        our own;
+                        <br /> regardless of who you are </em> <br /> or who violated your copyrights.
 
                 </p>
                 <a href="report_form.html" class="copyrightViolationSection_content_button">
@@ -334,13 +340,13 @@
                     <h1 id="stat__highlight">
                         175+
                     </h1>
-                    <h2 id="Member__stat__highlight" >
+                    <h2 id="Member__stat__highlight">
                         Members
                     </h2>
                 </div>
                 <div class="copyrightViolationSection_section_stats__songbox">
                     <p>PROTECTING</p>
-                    <h1 >
+                    <h1>
                         8500+
                     </h1>
                     <h1 id="Member__stat__highlight">
