--- a/members.html
+++ b/members.html
@@ -121,9 +121,9 @@
         <div class="container">
             <div class="row">
                 <div class="section-title">
-                    <h1>All Members</h1>
+                    <h1>Artists & Writers</h1>
                     <p>
-                        Why do you need We Did It Global? We are here to take 
+                        Why do you need We Did It Global? We are here to take
                         responsibility for the rights, royalties and security of your music
                     </p>
                 </div>
