Affiliate section update

--- a/tracks.html
+++ b/tracks.html
@@ -118,7 +118,7 @@
     <!--NAV and Sidebar End-->
 
     <div class="container">
-        <h1>Song Catalogue</h1>
+        <h1>Songs Catalogue</h1>
         <div id="songCatalogueReactContainer">
         </div>
     </div>
