--- a/index.html
+++ b/index.html
@@ -405,7 +405,51 @@
                 </a>
             </div>
             <div class="imageSection">
-                <img src="./images/index-assets/affiliates_image.png" />
+                <div class="grid__parent">
+                   
+                    <div class="div1 affiliate__card">
+                        <a href="">
+                            <img src="/images/orchard.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div2 affiliate__card">
+                        <a href="">
+                            <img src="/images/mds-logo.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div3 affiliate__card">
+                        <a href="">
+                            <img src="/images/YouTube.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div4 affiliate__card">
+                        <a href="">
+                            <img src="/images/backbeat.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div5 affiliate__card">
+                        <a href="">
+                            <img src="images/cisac.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div6 affiliate__card">
+                        <a href="">
+                            <img src="images/apra-amcos.png"  alt="">
+                        </a>
+                    </div>
+
+                    <div class="div7 affiliate__card">
+                        <a href="images/apra-amcos.png">
+                            <img src=""  alt="">
+                        </a>
+                    </div>
+
+                </div>
             </div>
         </section>
         <!--------------------------------------- End of Affliate Section  -------------------------------------->
