click through issue

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div id="snow__fall" style="position: fixed; top: 0; height: 100%; width: 100%;"></div>
+    <div id="snow__fall" style="position: fixed; pointer-events: none; top: 0; height: 100%; width: 100%;"></div>
     <!--------------------------------------- Nav Bar and Side Menu -------------------------------------->
     <div id="nav-placeholder">
         <main class="main">
