--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div id="snow__fall" style="position: fixed; pointer-events: none; top: 0; height: 100%; width: 100%;"></div>
+    <!-- <div id="snow__fall" style="position: fixed; pointer-events: none; top: 0; height: 100%; width: 100%;"></div>  -->
     <!--------------------------------------- Nav Bar and Side Menu -------------------------------------->
     <div id="nav-placeholder">
         <main class="main">
@@ -476,8 +476,10 @@
     <!-- Java Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="javascript/nav.js"></script>
-    <script src="/javascript/Particles/particles.min.js"></script>
-    <script src="/javascript/Particles/app.js"></script>
+    
+    
+    <!-- <script src="/javascript/Particles/particles.min.js"></script> 
+    <script src="/javascript/Particles/app.js"></script> -->
 </body>
 
 </html>
