added the 15000 banner

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                     </div>
                     <p><i class="fa fa-copyright"></i> 2020-2021, We Did It Global</p>
                 </div>
+                <div class="bannerSection" id="close">
+                    <span class="bannerdivclose" onclick="bannerCloseFunction()">x</span>
+                    <h2><p>Joinning Free For New Members Joinning From 01st of Jannuary 2022 <span>15,000 LKR</span></p></h2>
+                </div>
             </header>
         </main>
     </div>
