update banner free to fee

--- a/signupfoam.html
+++ b/signupfoam.html
@@ -172,6 +172,10 @@
                     </div>
                     <br><br>
 
+                    <!-- <div class="bannerdiv">
+                        <p>test</p>
+                    </div> -->
+
                     <div class="inputfield">
                         <input type="submit" value="Send Now !" class="btn" id="signupform-submit-button">
                     </div>
