update banner text

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="bannerSection" id="close">
                     <span class="bannerdivclose" onclick="bannerCloseFunction()">x</span>
-                    <h2><p>Joinning Free For New Members, Joinning From 01st of Jannuary 2022 is <span>LKR 15,000</span></p></h2>
+                    <h2><p>Joinning Fee For New Members, Joinning From 01st of Jannuary 2022 is <span>LKR 15,000</span></p></h2>
                 </div>
             </header>
         </main>
