signup form banner added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     </div>
                     <p><i class="fa fa-copyright"></i> 2020-2021, We Did It Global</p>
                 </div>
+    <!------------------------------------------Banner-------------------------------------------->
                 <div class="bannerSection" id="close">
                     <span class="bannerdivclose" onclick="bannerCloseFunction()">x</span>
                     <h2><p>Joining Fee For New Members, Joining From 01st of January 2022 is <span>LKR 15,000</span></p></h2>
