--- a/signupfoam.html
+++ b/signupfoam.html
@@ -170,7 +170,18 @@
                         <textarea type="text" class="input report-AddDetails" id="signUpForm-inputField-description"
                             maxlength="500"> </textarea>
                     </div>
-                    <br><br>
+                    <br>
+
+                    <!-------------------------Agree Message Div----------------------------------------------->
+                    <div class="bannerdiv">
+                        <p>Please note that we have introduced a joining fee for new members joining
+                            from January 1, 2022. This is a non-refundable fee. We will compulsorily process your
+                            application to be one of our members. Sri Lanka's only CISAC-affiliated music publishing
+                            administration.</p>
+                        <br>
+                        <input type="checkbox" id="cbxAgree" name="cbxAgree">
+                        <label for="cbxAgree">I Agree</label>
+                    </div>
 
                     <div class="inputfield">
                         <input type="submit" value="Send Now !" class="btn" id="signupform-submit-button">
@@ -227,7 +238,8 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f"
+                                target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
