--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!------------------------------------------Banner-------------------------------------------->
                 <div class="bannerSection" id="close">
                     <span class="bannerdivclose" onclick="bannerCloseFunction()">x</span>
-                    <h2><p>Joining Fee For New Members, Joining From 01st of January 2022 is <span>LKR 15,000</span></p></h2>
+                    <h2><p>Joining Fee For New Members, Joining From 01st of January 2022 is <span>15,000 LKR</span></p></h2>
                 </div>
             </header>
         </main>
