--- a/signupfoam.html
+++ b/signupfoam.html
@@ -184,7 +184,7 @@
                     </div>
 
                     <div class="inputfield">
-                        <input type="submit" value="Send Now !" class="btn" id="signupform-submit-button">
+                        <input type="submit" value="Send Now !" class="btn" id="signupform-submit-button" disabled>
                     </div>
 
 
